<resources>
    <string name="app_name">PaycheckMileageCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="allowances">Allowances</string>
    <string name="gross_pay">Gross Yearly Pay</string>
    <string name="num_paychecks">YTD Pay Periods</string>
    <string name="withholding">Withholding</string>
    <string name="filing_status">Filing Status</string>
    <string name="hourly_rate">Hourly Pay Rate</string>
    <string name="hours_worked">Hours Worked</string>
    <string name="social_security">Social Security Tax</string>
    <string name="medicare">Medicare Tax</string>
    <string name="federal">Federal Tax</string>
    <string name="title_activity_paycheck_input_fragment">PaycheckInputFragment</string>
    <string name="state_question_view">State:</string>
    <string name="calculate_button">Calculate</string>
    <string name="pay_question_view">Pay Type:</string>
    <string name="hourly">Hourly</string>
    <string name="salary">Salary</string>
    <string name="state_income_tax">State Income Tax</string>
    <string name="estimated_pay">Estimated Pay:</string>
    <string name="efficiency">Engine Efficiency</string>
    <string name="mpg_view">MPG</string>
    <string name="gallons_purchased">Gallons Purchased</string>
    <string name="gas_cost">Gasoline Cost</string>
    <string name="current_mileage">Current Mileage</string>
    <string name="gasoline_button">Calculate Mileage</string>
    <string name="amount_purchased">Amount Purchased</string>
    <string name="clear_button">Clear Data</string>
</resources>
