<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="70dp">

    <TextView
        android:id="@+id/federal_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/federal"/>

    <TextView
        android:id="@+id/federal_tax_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        tools:text="TESTTEXT"/>

    <TextView
        android:id="@+id/medicare_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicare"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/federal_tax"/>

    <TextView
        android:id="@+id/medicare_tax_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/federal_tax_value"
        android:text="TESTTEXT" />

    <TextView
        android:id="@+id/social_security_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social_security"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/medicare_tax"/>

    <TextView
        android:id="@+id/social_security_tax_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/medicare_tax_value"
        android:text="TESTTEXT" />

</RelativeLayout>
