<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="50dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/current_mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_mileage"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/paycheck_text_size"
            android:layout_margin="@dimen/paycheck_text_margin"/>

        <EditText
            android:id="@+id/current_mileage_value"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@+id/current_mileage"
            tools:text="SNARF"
            android:background="@color/text_background_color"/>

        <TextView
            android:id="@+id/amount_purchased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_purchased"
            android:layout_below="@+id/current_mileage"
            android:textSize="@dimen/paycheck_text_size"
            android:layout_margin="@dimen/paycheck_text_margin"/>

        <EditText
            android:id="@+id/amount_purchased_value"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@+id/amount_purchased"
            tools:text="MEOW"
            android:background="@color/text_background_color"/>

        <TextView
            android:id="@+id/gas_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas_cost"
            android:layout_below="@+id/amount_purchased"
            android:textSize="@dimen/paycheck_text_size"
            android:layout_margin="@dimen/paycheck_text_margin"/>

        <EditText
            android:id="@+id/gas_cost_value"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@id/gas_cost"
            tools:text="RUFF"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/mpg_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpg_view"
            android:textSize="@dimen/paycheck_text_size"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/paycheck_text_margin"/>

        <TextView
            android:id="@+id/mpg_view_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/mpg_view"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/paycheck_text_size"
            tools:text="mpg"/>

        <TextView
            android:id="@+id/efficiency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/efficiency"
            android:textSize="@dimen/paycheck_text_size"
            android:layout_below="@+id/mpg_view"
            android:layout_margin="@dimen/paycheck_text_margin"/>

        <TextView
            android:id="@+id/efficiency_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/efficiency"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/paycheck_text_size"
            tools:text="efficiency"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_below="@+id/efficiency"
            android:textSize="@dimen/paycheck_text_size"/>

        <Button
            android:id="@+id/efficiency_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="@dimen/paycheck_text_size"
            android:text="@string/gasoline_button"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
</LinearLayout>