<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.michaelt.paycheckmileagecalculator.salaryFragment"
    android:layout_marginTop="20dp"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    ///////////////Indentation Views///////////////
    <!--<View-->
        <!--android:id="@+id/left_indentation_view"-->
        <!--android:layout_width="70dp"-->
        <!--android:layout_height="0dp"/>-->
    <!--<View-->
        <!--android:id="@+id/right_indentation_view"-->
        <!--android:layout_width="90dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_alignParentRight="true"/>-->

    ///////////////Hourly Rate///////////////
    <TextView
        android:id="@+id/hourly_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hourly_rate"
        android:layout_marginBottom="12dp"/>
        //android:background="#ff00BB00"/>
    <EditText
        android:id="@+id/edit_gross_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:gravity="right"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/hourly_rate"
        android:background="#ffa4a4a4"/>
        //android:text="34.72"

    ///////////////Hours///////////////
    <TextView
        android:id="@+id/hours_worked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_worked"
        android:layout_below="@+id/hourly_rate"
        android:layout_alignLeft="@+id/hourly_rate"
        android:layout_marginBottom="12dp"/>
        //android:background="#ff00BBFF"/>
    <EditText
        android:id="@+id/edit_num_paychecks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:background="#ffa4a4a4"
        android:layout_alignBaseline="@+id/hours_worked"
        android:layout_alignBottom="@+id/hours_worked"
        android:layout_alignLeft="@+id/edit_gross_pay"
        android:layout_alignStart="@+id/edit_gross_pay"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
        //android:text="80"

    ///////////////Filing Status///////////////
    <TextView
        android:id="@+id/filing_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filing_status"
        android:layout_below="@+id/hours_worked"
        android:layout_alignLeft="@+id/hourly_rate"
        android:layout_marginBottom="12dp"/>
        //android:background="#ff00BB00"/>
    <Spinner
        android:id="@+id/filing_status_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff008800"
        android:layout_toRightOf="@+id/filing_status"
        android:layout_alignLeft="@+id/edit_num_paychecks"
        android:layout_alignStart="@+id/edit_num_paychecks"
        android:layout_alignBottom="@+id/filing_status"
        android:layout_alignTop="@+id/filing_status"
        android:layout_alignRight="@+id/edit_withholding"
        android:layout_alignEnd="@+id/edit_withholding" />

    ///////////////Withholding////////////////
    <TextView
        android:id="@+id/withholding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withholding"
        android:layout_below="@+id/filing_status"
        android:layout_alignLeft="@+id/hourly_rate"
        android:layout_marginBottom="12dp"/>
        //android:background="#ff00BBFF"/>
    <EditText
        android:id="@+id/edit_withholding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:gravity="right"
        android:background="#ffa4a4a4"
        android:layout_alignBaseline="@+id/withholding"
        android:layout_alignBottom="@+id/withholding"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
        //android:text="2"

    ///////////////Allowances///////////////
    <TextView
        android:id="@+id/allowances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allowances"
        android:layout_below="@+id/withholding"
        android:layout_alignLeft="@+id/hourly_rate"/>
        //android:background="#ff00BB00"/>
    <EditText
        android:id="@+id/edit_allowances"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:background="#ffa4a4a4"
        android:layout_alignBaseline="@+id/allowances"
        android:layout_alignBottom="@+id/allowances"
        android:layout_alignRight="@+id/edit_withholding"
        android:layout_alignEnd="@+id/edit_withholding"
        android:layout_alignLeft="@+id/edit_withholding"
        android:layout_alignStart="@+id/edit_withholding" />

    //android:text="30"

</RelativeLayout>
