<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/state_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffa4a4a4"/>

        <FrameLayout
            android:id="@+id/pay_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="50dp"
        android:paddingRight="70dp"
        android:paddingBottom="20dp">

        <View
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_margin="15dp"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/federal_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/top_line"
            android:layout_margin="10dp"
            android:text="@string/federal"/>

        <TextView
            android:id="@+id/federal_tax_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/top_line"
            android:layout_margin="10dp"
            android:text="TESTTEXT"/>

        <TextView
            android:id="@+id/medicare_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicare"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:layout_below="@+id/federal_tax"/>

        <TextView
            android:id="@+id/medicare_tax_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/federal_tax_value"
            android:layout_margin="10dp"
            android:text="TESTTEXT" />

        <TextView
            android:id="@+id/social_security_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_security"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:layout_below="@+id/medicare_tax"/>

        <TextView
            android:id="@+id/social_security_tax_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/medicare_tax_value"
            android:layout_margin="10dp"
            android:text="TESTTEXT" />

        <View
            android:id="@+id/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="20dp"
            android:background="#000000"
            android:layout_below="@+id/social_security_tax_value"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bottom_line"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</LinearLayout>
